Renamed test scripts + improved docuementation